syntax = "proto3";

option java_multiple_files = true;
option java_package = "kafka.sandbox.proto";

service CountService {
  rpc GetCountByCountry (CountRequest) returns (CountReply) {}
}

message CountRequest {
  string name = 1;
}

message CountReply {
  string message = 1;
}
